src/core-crm/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject> 