src/core-crm/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN (Australian Business Number) validated against the Australian Business Register</description>
    <label>ABN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>