src/core-crm/objects/Account/fields/AccountABNEntity_Validation__c.field-meta.xml
<CustomField>
    <fullName>AccountABNEntity_Validation__c</fullName>
    <label>AccountABNEntity Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Validation</valueSetName>
    </valueSet>
</CustomField>