src/core-crm/objects/Account/fields/hed__Billing_Address_Inactive__c.field-meta.xml
<CustomField>
    <fullName>hed__Billing_Address_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this billing address is inactive</description>
    <inlineHelpText>Indicates that this billing address is inactive</inlineHelpText>
    <label>Billing Address Inactive</label>
    <type>Checkbox</type>
</CustomField>