src/core-crm/objects/Account/fields/hed__Credentialing_Email__c.field-meta.xml
<CustomField>
    <fullName>hed__Credentialing_Email__c</fullName>
    <description>The email address used to verify a credential from the organization related to this Account.</description>
    <inlineHelpText>The email address used to verify a credential from the organization related to this Account.</inlineHelpText>
    <label>Credentialing Email</label>
    <type>Email</type>
</CustomField>