src/core-crm/objects/Account/fields/hed__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main Contact for a Household or Administrative Account.</description>
    <inlineHelpText>The main Contact for a Household or Administrative Account.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>