src/core-crm/objects/Account/fields/Industry_Sub_Classification__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sub_Classification__c</fullName>
    <description>The industry sub-classification assigned to an organization which describes the predominant business activity.
Refer to Australian and New Zealand Standard Industrial Classification (ANZSIC), 2006 (Revision 2.0), ABS Catalogue No 1292.0 or NAT 1827-6:2014 (BIC)</description>
    <label>Industry Sub-Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Agriculture</fullName>
            </value>
            <value>
                <fullName>02 - Aquaculture</fullName>
            </value>
            <value>
                <fullName>03 - Forestry and Logging</fullName>
            </value>
            <value>
                <fullName>04 - Fishing, Hunting and Trapping</fullName>
            </value>
            <value>
                <fullName>05 - Agriculture, Forestry and Fishing Support Services</fullName>
            </value>
            <value>
                <fullName>06 - Coal Mining</fullName>
            </value>
            <value>
                <fullName>07 - Oil and Gas Extraction</fullName>
            </value>
            <value>
                <fullName>08 - Metal Ore Mining</fullName>
            </value>
            <value>
                <fullName>09 - Non-Metallic Mineral Mining and Quarrying</fullName>
            </value>
            <value>
                <fullName>10 - Exploration and Other Mining Support Services</fullName>
            </value>
            <value>
                <fullName>11 - Food Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>12 - Beverage and Tobacco Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>13 - Textile, Leather, Clothing and Footwear Manufacturing</fullName>
            </value>
            <value>
                <fullName>14 - Wood Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>15 - Pulp, Paper and Converted Paper Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>16 - Printing (including the Reproduction of Recorded Media)</fullName>
            </value>
            <value>
                <fullName>17 - Petroleum and Coal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>18 - Basic Chemical and Chemical Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>19 - Polymer Product and Rubber Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>20 - Non-Metallic Mineral Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>21 - Primary Metal and Metal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>22 - Fabricated Metal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>23 - Transport Equipment Manufacturing</fullName>
            </value>
            <value>
                <fullName>24 - Machinery and Equipment Manufacturing</fullName>
            </value>
            <value>
                <fullName>25 - Furniture and Other Manufacturing</fullName>
            </value>
            <value>
                <fullName>26 - Electricity Supply</fullName>
            </value>
            <value>
                <fullName>27 - Gas Supply</fullName>
            </value>
            <value>
                <fullName>28 - Water Supply, Sewerage and Drainage Services</fullName>
            </value>
            <value>
                <fullName>29 - Waste Collection, Treatment and Disposal Services</fullName>
            </value>
            <value>
                <fullName>30 - Building Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>