src/core-crm/objects/Account/fields/Is_Priority_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Priority_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags whether an academic program is a priority program (QUT Course)</description>
    <label>Is Priority Program</label>
    <type>Checkbox</type>
</CustomField>