src/core-crm/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Estimated count of employees employed by an organisation.</description>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large (&gt;200)</fullName>
            </value>
            <value>
                <fullName>Medium (&lt;200)</fullName>
            </value>
            <value>
                <fullName>Small (&lt;50)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>