src/core-crm/objects/Account/fields/Organization_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Unit_Code__c</fullName>
    <externalId>true</externalId>
    <label>Organization Unit Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>