src/core-crm/objects/Account/fields/Organization_Unit_Level__c.field-meta.xml
<CustomField>
    <fullName>Organization_Unit_Level__c</fullName>
    <description>The level (1,2,3) of the organizational unit within the QUT Organizational hierarchy.</description>
    <label>Organization Unit Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>