src/core-crm/objects/Account/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>The 4 Character code assigned to a Course populated by Integration form SAMS (Originating from Courseloop)

Study link may contain composit course codes for pathway packages.</description>
    <label>Program Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>