src/core-crm/objects/Account/fields/Program_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Full_Name__c</fullName>
    <description>Full title of the Course or Studylink Package as per SAMS from Integration</description>
    <label>Program Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>