src/core-crm/objects/Account/recordTypes/University_Department.recordType-meta.xml
<RecordType>
    <fullName>University_Department</fullName>
    <active>true</active>
    <description>A department in the educational institution.</description>
    <label>University Department</label>
</RecordType>